--- a/SuryaGallery/AndroidManifest.xml
+++ b/SuryaGallery/AndroidManifest.xml
@@ -13,6 +13,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
+        android:hardwareAccelerated="false"
+        android:largeHeap="true"
         android:allowBackup="true"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
