--- a/SuryaGallery/AndroidManifest.xml
+++ b/SuryaGallery/AndroidManifest.xml
@@ -15,10 +15,11 @@
     <application
         android:hardwareAccelerated="false"
         android:largeHeap="true"
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
         <activity
             android:name="com.saiganeshk.suryagallery.Home"
             android:label="@string/app_name" >
