--- a/SuryaGallery/AndroidManifest.xml
+++ b/SuryaGallery/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.saiganeshk.suryagallery"
-    android:versionCode="5"
+    android:versionCode="6"
     android:installLocation="preferExternal"
-    android:versionName="1.4" >
+    android:versionName="1.5" >
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -21,6 +21,9 @@
         android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
+        <service android:name="com.saiganeshk.suryagallery.utils.ImageDownloadService"
+            android:exported="false" />
         
         <activity
             android:name="com.saiganeshk.suryagallery.Home"
